--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -8,8 +8,8 @@
     <title>Qr Component</title>
 </head>
 <body>
-    <div class="container">
-        <img src="/qr-code-component-main/images/image-qr-code.png" alt="image-qr-code" style="">
+    <div role="container" class="container">
+        <img src="/images/image-qr-code.png" alt="image-qr-code">
         <div class="text-container">
             <div class="header">Improve your front-end skills by building projects</div>
             <div class="content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
