--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" sizes="32x32" href="images/favicon-32x32.png" type="image/png">
     <title>Qr Component</title>
 </head>
 <body>
-    <div role="container" class="container">
-        <img src="/images/image-qr-code.png" alt="image-qr-code">
-        <div class="text-container">
-            <div class="header">Improve your front-end skills by building projects</div>
-            <div class="content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
-        </div>
-    </div>
+    <main>
+        <img src="/qr-code-component-main/images/image-qr-code.png" alt="QR code to frontend mentor">
+        <section> 
+            <header>Improve your front-end skills by building projects</header>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </section>
+    </main>
 </body>
 </html>
